[package]
name = "matrix65"
description = "Matrix Mode Serial Communicator for MEGA65"
version = "0.1.2"
edition = "2021"
authors = ["Mikael Lund <lyssky@icloud.com>"]
homepage = "https://github.com/mlund/matrix65"
repository = "https://github.com/mlund/matrix65"
documentation = "https://docs.rs/matrix65"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mega65", "serial", "8-bit"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
hex = "0.4.3"
parse_int = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.19"
crossterm = "0.25"
cbm = "0.1"
tempfile = "3.3"
anyhow = "1.0.64"

[profile.release]
strip = true     # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true       # Link-time optimization
